Add Jormungandr samlidp tests
