# swagger/swagger.yaml
@@ -4,6 +4,32 @@ consumes:
 - application/gob
 - application/x-gob
 definitions:
+  DeleteSPPayload:
+    description: DeleteSPPayload
+    example:
+      serviceId: Itaque nam vel non quis porro tempora.
+    properties:
+      serviceId:
+        description: ID of service provider
+        example: Itaque nam vel non quis porro tempora.
+        type: string
+    required:
+    - serviceId
+    title: DeleteSPPayload
+    type: object
+  DeleteSessionPayload:
+    description: DeleteSessionPayload
+    example:
+      sessionId: Quod asperiores.
+    properties:
+      sessionId:
+        description: ID of the session
+        example: Quod asperiores.
+        type: string
+    required:
+    - sessionId
+    title: DeleteSessionPayload
+    type: object
   error:
     description: Error response media type (default view)
     example:
@@ -47,6 +73,62 @@ info:
   title: The saml identity provider microservice
   version: "1.0"
 paths:
+  /css/{filepath}:
+    get:
+      operationId: public#/css/*filepath
+      parameters:
+      - description: Relative file path
+        in: path
+        name: filepath
+        required: true
+        type: string
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+        "404":
+          description: File not found
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: Download public/css
+  /js/{filepath}:
+    get:
+      operationId: public#/js/*filepath
+      parameters:
+      - description: Relative file path
+        in: path
+        name: filepath
+        required: true
+        type: string
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+        "404":
+          description: File not found
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: Download public/js
+  /saml/idp/metadata:
+    get:
+      description: Get Jormungandr metadata
+      operationId: idp#getMetadata
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+      schemes:
+      - http
+      summary: getMetadata idp
+      tags:
+      - idp
   /saml/idp/metadata/google:
     get:
       description: Get Google's metadata
@@ -59,6 +141,148 @@ paths:
       schemes:
       - http
       summary: getGoogleMetadata idp
+      tags:
+      - idp
+  /saml/idp/services:
+    delete:
+      description: Delete a service provider
+      operationId: idp#deleteServiceProvider
+      parameters:
+      - description: DeleteSPPayload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/DeleteSPPayload'
+      produces:
+      - application/vnd.goa.error
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: deleteServiceProvider idp
+      tags:
+      - idp
+    get:
+      description: Get all service providres
+      operationId: idp#getServiceProviders
+      produces:
+      - application/vnd.goa.error
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: getServiceProviders idp
+      tags:
+      - idp
+    post:
+      description: Add new service provider
+      operationId: idp#addServiceProvider
+      produces:
+      - application/vnd.goa.error
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: addServiceProvider idp
+      tags:
+      - idp
+  /saml/idp/sessions:
+    delete:
+      description: Delete a service provider
+      operationId: idp#deleteSession
+      parameters:
+      - description: DeleteSessionPayload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/DeleteSessionPayload'
+      produces:
+      - application/vnd.goa.error
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: deleteSession idp
+      tags:
+      - idp
+    get:
+      description: Get all sessions
+      operationId: idp#getSessions
+      produces:
+      - application/vnd.goa.error
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: getSessions idp
+      tags:
+      - idp
+  /saml/idp/sso:
+    get:
+      description: Serve Single Sign On
+      operationId: idp#serveSSO
+      schemes:
+      - http
+      summary: serveSSO idp
+      tags:
+      - idp
+    post:
+      description: Creare user session
+      operationId: idp#serveLogin
+      schemes:
+      - http
+      summary: serveLogin idp
       tags:
       - idp
   /swagger-ui/{filepath}:
@@ -99,6 +323,8 @@ produces:
 - application/gob
 - application/x-gob
 responses:
+  Created:
+    description: Created
   OK:
     description: OK
 schemes:
